rucq-dev/admin-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rucq-admin

spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1

      containers:
        - name: rucq-admin
          image: ghcr.io/traptitech/rucq-admin:main@sha256:98b53a9906e26857667b009de9eab6a3bae5731211671396e8119f5dd744d73b
