rucq-dev/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rucq-backend

spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1

      containers:
        - name: rucq-backend
          image: ghcr.io/traptitech/rucq:main@sha256:7c9198b58e52c08c653a60aab448f9afe177258c81103a877d4552829bde28dc
