rucq-dev/ui-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rucq-ui

spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - eee101.tokyotech.org
              weight: 1

      containers:
        - name: rucq-ui
          image: ghcr.io/traptitech/rucq-ui:main@sha256:41e72df9fd9f9c4e99b949392660ba1a5316d46a270fe4369950baccf0d64b96
